Bug 434807 - Misspelling when writing to fstab
Summary: Misspelling when writing to fstab
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.3
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Andrius Štikonas
URL:
Keywords:
: 435079 450886 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-03-23 01:10 UTC by Sebastian Dicke
Modified: 2022-02-26 17:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian Dicke 2021-03-23 01:10:55 UTC
SUMMARY

Newly added entries for Btrfs file systems are misspelled. In the entry is Btrfs as file system type annotated, which is an incorrect spelling from mounts point of view. It will mount the created file system after change the type annotation to btrfs.

STEPS TO REPRODUCE
1. Create a new Btrfs filesystem
2. Open mount point edit dialog
3. Set a path
4. Press the Ok button
5. The change will be written to /etc/fstab
6. Try to mount the file system with mount -a, which will fail

OBSERVED RESULT
Mount will fail

EXPECTED RESULT
Mount should be conducted without errors

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:
KDE Plasma Version: 5.21.3
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2
Kernel Version: 5.12
Comment 1 Andrius Štikonas 2021-03-23 10:17:05 UTC
Temporary workaround is not to use German locale. I think capital letter comes from po file. I'll later try to fix it not to use translated name (I thought it already doesn't, but apparently not).
Comment 2 Andrius Štikonas 2021-03-23 19:35:28 UTC
Git commit 247a8f51cfed85d68118a830a7a8c4167ef22aad by Andrius Štikonas.
Committed on 23/03/2021 at 19:35.
Pushed by stikonas into branch 'release/20.12'.

Use untranslated filesystem name for fstab entries.

M  +1    -1    src/gui/editmountpointdialogwidget.cpp

https://invent.kde.org/system/partitionmanager/commit/247a8f51cfed85d68118a830a7a8c4167ef22aad
Comment 3 Andrius Štikonas 2021-03-23 19:35:37 UTC
Git commit bdb0d25ace912f4ad4cc7fe7d96056f5b612d96f by Andrius Štikonas.
Committed on 23/03/2021 at 19:33.
Pushed by stikonas into branch 'master'.

Use untranslated filesystem name for fstab entries.

M  +1    -1    src/gui/editmountpointdialogwidget.cpp

https://invent.kde.org/system/partitionmanager/commit/bdb0d25ace912f4ad4cc7fe7d96056f5b612d96f
Comment 4 Andrius Štikonas 2021-03-23 19:36:32 UTC
Git commit 89721efb2b55b4ef1104691947e7b411e2490d1e by Andrius Štikonas.
Committed on 23/03/2021 at 19:36.
Pushed by stikonas into branch 'release/21.04'.

Use untranslated filesystem name for fstab entries.

M  +1    -1    src/gui/editmountpointdialogwidget.cpp

https://invent.kde.org/system/partitionmanager/commit/89721efb2b55b4ef1104691947e7b411e2490d1e
Comment 5 Andrius Štikonas 2021-03-28 20:14:02 UTC
*** Bug 435079 has been marked as a duplicate of this bug. ***
Comment 6 Andrius Štikonas 2022-02-26 17:58:06 UTC
*** Bug 450886 has been marked as a duplicate of this bug. ***