Use untranslated filesystem name for fstab entries.

BUG: 434807